Add Sample Data

--- a/player/career.ipynb
+++ b/player/career.ipynb
@@ -169,7 +169,8 @@
     "        strikeRate = 0\n",
     "    else:\n",
     "        ball = balls\n",
-    "        strikeRate = round(int(runs)/int(balls) * 100,2)\n",
+    "        if(int(balls)>0):\n",
+    "            strikeRate = round(int(runs)/int(balls) * 100,2)\n",
     "        \n",
     "    fours_cell  = cols.find_all('td')[4]\n",
     "    soup = bs4.BeautifulSoup(str(fours_cell))\n",
